# invoice_to_excel_v1

./: .coverage  .env.example  .gitignore  GIT_PUSH_SUMMARY.md  InvoiceProcessor_64bit.spec  PUSH_COMMANDS.md  PUSH_TO_GIT_INSTRUCTIONS.md  README.md  UPDATED_WINDOWS_BUILD_SECTION.yml  generate_current_summary.py  pyproject.toml  pytest.ini  quickstart.sh
.claude/: settings.local.json
.github/workflows/: build.yml
cd/: README.md
cd/assets/: README.md
cd/assets/icons/: app.icns
cd/assets/windows/: version_info.txt
cd/config/: app_config.py  macos.spec  simple_windows.spec  windows.spec  windows_32bit.spec  windows_64bit.spec
cd/scripts/: build_all.sh  build_macos.sh  build_windows.sh  common.sh
src/invoice_processor/: __init__.py  main.py
src/invoice_processor/extractors/: ai_extractor.py  image_extractor.py  pdf_extractor.py
src/invoice_processor/models/: invoice.py
src/invoice_processor/utils/: file_utils.py  summary_generator.py
src/invoice_processor/workflows/: invoice_workflow.py
tests/: conftest.py  test_basic.py  test_extractors.py  test_file_utils.py  test_integration.py  test_main.py  test_models.py  test_summary_generator.py  test_workflow.py
tests/features/: ai_extraction.feature  data_processing.feature  file_discovery.feature  summary_generation.feature  text_extraction.feature  workflow_integration.feature
tests/step_definitions/: test_ai_extraction_steps.py  test_file_discovery_steps.py
